--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,15 +121,15 @@
 
 @layer base {
   html {
-    min-height: 100%;      /* ensure full height */
+    min-height: 100%;      
   }
   body {
     @apply bg-gradient-to-br
            from-blue-50 to-blue-100
            dark:from-gray-800 dark:to-black
            flex justify-center items-start
-           p-8
-           min-h-screen;    /* fill screen */
+           p-0 sm:p-4 lg:p-8
+           min-h-screen;   
   }
 }
 
